--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1>Speedtest Results Analysis</h1>
     <input type="file" id="fileInput" accept=".csv">
     <button onclick="processFile()">Upload and Process</button>
+    <button id="showAllTests">Show All Tests</button>
     
     <div id="stats"></div>
     <div id="map"></div>
