--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <div id="controls">
         <input type="file" id="fileInput" accept=".csv">
         <button id="processButton" onclick="processFile()">Upload and Process</button>
+        <button id="toggleSelectionButton" onclick="toggleSelectionMode()">Toggle Selection Mode</button>
     </div>
     <div id="stats"></div>
     <div id="switches"></div>
     <div id="map"></div>
+    <div id="testResultsModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <div id="modalTests"></div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
